// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartGradingButton component component snapshot: graded (startGrading callback 1`] = `
<Button
  iconAfter="Highlight"
  onClick={[MockFunction this.props.startGrading]}
  variant="primary"
>
  Override grade
</Button>
`;

exports[`StartGradingButton component component snapshot: inProgress (stopGrading callback 1`] = `
<Button
  iconAfter="Cancel"
  onClick={[MockFunction this.props.stopGrading]}
  variant="primary"
>
  Stop grading this response
</Button>
`;

exports[`StartGradingButton component component snapshot: locked (null) 1`] = `""`;

exports[`StartGradingButton component component snapshot: ungraded (startGrading callback) 1`] = `
<Button
  iconAfter="Highlight"
  onClick={[MockFunction this.props.startGrading]}
  variant="primary"
>
  Start Grading
</Button>
`;
